--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -11,7 +11,7 @@
         <h4>Навигация</h4>
         <ul class="list-unstyled">
           <li>
-            <a href="{% url 'dogs_list' %}" class="text-white">Главная</a>
+            <a href="{% url 'dog_list' %}" class="text-white">Главная</a>
           </li>
           <li>
             <a
