--- a/templates/includes/top_section.html
+++ b/templates/includes/top_section.html
@@ -7,14 +7,14 @@
       </p>
       <p>
         <a
-          href="https://getbootstrap.com/docs/5.3/examples/album/#"
+          href="{% url 'dog_create' %}"
           class="btn btn-primary my-2"
-          >Main call to action</a
+          >Добавить новую запись</a
         >
         <a
-          href="https://getbootstrap.com/docs/5.3/examples/album/#"
+          href="#"
           class="btn btn-secondary my-2"
-          >Secondary action</a
+          >Пока не используемая кнопка</a
         >
       </p>
     </div>
