--- a/templates/dogs/dog_form.html
+++ b/templates/dogs/dog_form.html
@@ -7,32 +7,58 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="row">
+<div class="container">
+    <div class="row">
+
+        <form class="row" method="post" enctype="multipart/form-data">
+
+            <!-- Карточка 1: основная форма -->
             <div class="col-6">
-                <form class="row" method="post" enctype="multipart/form-data">
-                    <div class="card">
-                        <div class="card-title">
-                            <h3>Создание новой записи</h3>
-                        </div>
-                        <div class="card-body">
-                            {% csrf_token %}
-                            {{ form.as_p }}
-                        </div>
-                        <p>
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">
                             {% if object %}
-                                <button type="submit" class="btn btn-primary">Сохранить</button>
+                            Редактирование
                             {% else %}
-                                <button type="submit" class="btn btn-primary">Создать</button>
+                            Создание
                             {% endif %}
-
-                        </p>
-
-
+                            новой записи</h3>
                     </div>
-                </form>
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                    </div>
+                    <p>
+                        {% if object %}
+                        <button type="submit" class="btn btn-primary">Сохранить</button>
+                        {% else %}
+                        <button type="submit" class="btn btn-primary">Создать</button>
+                        {% endif %}
+                    </p>
+                </div>
             </div>
-        </div>
+
+            <!-- Карточка 2: для формсетов -->
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">Предок собаки</h3>
+                    </div>
+                    <div class="card-body">
+                        {{ formset.management_form }}
+                        {% for form in formset.forms %}
+                        {{ form.as_p }}
+                        <hr>
+                        {% endfor %}
+                    </div>
+                    <div class="carf-footer"></div>
+                </div>
+            </div>
+
+
+        </form>
+
     </div>
+</div>
 
 {% endblock content %}
