Custom user model and auth

--- a/templates/dogs/dog_list.html
+++ b/templates/dogs/dog_list.html
@@ -14,8 +14,8 @@
       <!-- Начало карточки -->
           <div class="col">
             <div class="card shadow-sm">
-                <div class="card-title">
-                    <h5 class="">{{ dog.name }} </h5>
+                <div class="card-header">
+                    <h5 class="card-title">{{ dog.name }} </h5>
                 </div>
 
               <img src="{{ dog.photo | media_filter }}" alt="фото собаки" />
