--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,74 +1,77 @@
 <div class="collapse text-bg-dark" id="navbarHeader">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8 col-md-7 py-4">
-        <h4>О собаках</h4>
-        <p class="text-body-secondary">
-          Обновлённая информация появится позже ...
-        </p>
-      </div>
-      <div class="col-sm-4 offset-md-1 py-4">
-        <h4>Навигация</h4>
-        <ul class="list-unstyled">
-          <li>
-            <a href="{% url 'dog_list' %}" class="text-white">Главная</a>
-          </li>
-          <li>
-            <a
-              href="https://getbootstrap.com/docs/5.3/examples/album/#"
-              class="text-white"
-              >Ссылка 2</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://getbootstrap.com/docs/5.3/examples/album/#"
-              class="text-white"
-              >Ссылка 3</a
-            >
-          </li>
-        </ul>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+                <h4>О собаках</h4>
+                <p class="text-body-secondary">
+                    Обновлённая информация появится позже ...
+                </p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+                <ul class="list-unstyled">
+                    {% if user.is_authenticated %}
+                    <a class="btn btn-outline-secondary" href="{% url 'users:profile' %}">Профиль</a>
+                    <form method="post" action="{% url 'users:logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-secondary">Выйти</button>
+                    </form>
+                    {% else %}
+                    <a class="btn btn-outline-secondary" href="{% url 'users:registration' %}">Регистрация</a>
+                    <a class="btn btn-outline-secondary" href="{% url 'users:login' %}">Войти</a>
+
+                    {% endif %}
+
+                </ul>
+
+
+                <h4>Навигация</h4>
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="{% url 'dog_list' %}" class="text-white">Главная</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <div class="navbar navbar-dark bg-dark shadow-sm">
-  <div class="container">
-    <a
-      href="/"
-      class="navbar-brand d-flex align-items-center"
-    >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="20"
-        height="20"
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        aria-hidden="true"
-        class="me-2"
-        viewBox="0 0 24 24"
-      >
-        <path
-          d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
-        ></path>
-        <circle cx="12" cy="13" r="4"></circle>
-      </svg>
-      <strong>Собачья сеть</strong>
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarHeader"
-      aria-controls="navbarHeader"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </div>
+    <div class="container">
+        <a
+                href="/"
+                class="navbar-brand d-flex align-items-center"
+        >
+            <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    aria-hidden="true"
+                    class="me-2"
+                    viewBox="0 0 24 24"
+            >
+                <path
+                        d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
+                ></path>
+                <circle cx="12" cy="13" r="4"></circle>
+            </svg>
+            <strong>Собачья сеть</strong>
+        </a>
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarHeader"
+                aria-controls="navbarHeader"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
 </div>
