--- a/templates/includes/top_section.html
+++ b/templates/includes/top_section.html
@@ -1,22 +1,24 @@
 <section class="py-5 text-center container">
-  <div class="row py-lg-5">
-    <div class="col-lg-6 col-md-8 mx-auto">
-      <h1 class="fw-light">Собаки</h1>
-      <p class="lead text-body-secondary">
-        Собачья социальная сеть для владельцев собак
-      </p>
-      <p>
-        <a
-          href="{% url 'dog_create' %}"
-          class="btn btn-primary my-2"
-          >Добавить новую запись</a
-        >
-        <a
-          href="#"
-          class="btn btn-secondary my-2"
-          >Пока не используемая кнопка</a
-        >
-      </p>
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">Собаки</h1>
+            <p class="lead text-body-secondary">
+                Собачья социальная сеть для владельцев собак
+            </p>
+            <p>
+                {% if user.is_authenticated %}
+                <a
+                        href="{% url 'dog_create' %}"
+                        class="btn btn-primary my-2"
+                >Добавить новую запись</a
+                >
+                {% endif %}
+                <a
+                        href="#"
+                        class="btn btn-secondary my-2"
+                >Пока не используемая кнопка</a
+                >
+            </p>
+        </div>
     </div>
-  </div>
 </section>
